@@ -1868,12 +1868,30 @@ name|String
 name|field
 parameter_list|)
 block|{
+if|if
+condition|(
+name|slopFactor
+operator|==
+literal|0
+condition|)
 return|return
 literal|"\""
 operator|+
 name|phrasedQueryStringContents
 operator|+
 literal|"\""
+return|;
+else|else
+return|return
+literal|"\""
+operator|+
+name|phrasedQueryStringContents
+operator|+
+literal|"\""
+operator|+
+literal|"~"
+operator|+
+name|slopFactor
 return|;
 block|}
 annotation|@
