@@ -791,6 +791,100 @@ literal|"3"
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testToStringContainsSlop
+specifier|public
+name|void
+name|testToStringContainsSlop
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ComplexPhraseQueryParser
+name|qp
+init|=
+operator|new
+name|ComplexPhraseQueryParser
+argument_list|(
+name|defaultFieldName
+argument_list|,
+name|analyzer
+argument_list|)
+decl_stmt|;
+name|int
+name|slop
+init|=
+name|random
+argument_list|()
+operator|.
+name|nextInt
+argument_list|(
+literal|31
+argument_list|)
+operator|+
+literal|1
+decl_stmt|;
+name|String
+name|qString
+init|=
+literal|"name:\"j* smyth~\"~"
+operator|+
+name|slop
+decl_stmt|;
+name|Query
+name|query
+init|=
+name|qp
+operator|.
+name|parse
+argument_list|(
+name|qString
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Slop is not shown in toString()"
+argument_list|,
+name|query
+operator|.
+name|toString
+argument_list|()
+operator|.
+name|endsWith
+argument_list|(
+literal|"~"
+operator|+
+name|slop
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|String
+name|string
+init|=
+literal|"\"j* smyth~\""
+decl_stmt|;
+name|Query
+name|q
+init|=
+name|qp
+operator|.
+name|parse
+argument_list|(
+name|string
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Don't show implicit slop of zero"
+argument_list|,
+name|q
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+name|string
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|testHashcodeEquals
 specifier|public
 name|void
